# witty

./: backup.sh  build.sh  syntax-notes.txt  test.sh  tmrn.sh  witty.sh
antlr/: .lang.g.swp  .lang.js.swp  .langParser.js.swp  build.sh  lang.g  lang.js  lang.tokens  langLexer.js  langParser.js  lang__.g  macro.js  runtime.js  tests.js  util.js  witty.g
etc/tamarin/: parse.es.abc  shell  util.es.abc
etc/v8/: shell
haskell/: Parse.hs  build.sh  foundation.wy  inline.rb  interpr.hs  parsec-whitespace-patch.txt  parser.hs  prim.hs  repl.hs  test.hs  test.sh  types.hs  witty.cabal
haskell/src/: fileio.hs  foundation.wy  interpr.hs  parser.hs  prim.hs  repl.hs  types.hs  types2.hs
haskell/test/: hunit.hs
js/: build.sh  test.sh  tmrn.sh  web.html  witty.sh
js/antlr/: witty.g
js/lib/: dtype.js  interpr.js  macro.js  printer.js  repl.js  stdlib.wy  tamarin-ext.js  wittyLexer.js  wittyParser.js
js/src/: dtype.js  macro.js  printer.js  stdlib.wy  wittyLexer.js  wittyParser.js
lib/: dtype.js  interpr.js  lang.js  lang.tokens  langLexer-tmrn.js  langLexer.js  langParser.js  macro.js  matcher.js  repl.js  rhino-ext.js  runtime-tmrn.js  stdlib.lang  stdlib.w  stdlib.wy  test.js  test.lang  util.js  wittyLexer.js  wittyParser.js
parrot/: Makefile  README  wy.pir
src/: dtype.js  interpr.js  macro.js  repl.js  stdlib.wy  util.js
test/: arithmetics.w  arithmetics.wy  base.w  base.wy  control.w  control.wy  fileio.wy  hash.wy  lambda.w  lambda.wy  list.w  list.wy  macro.w  macro.wy  map.wy  module.wy  package.wy  pattern.js  stdlib.wy  string.w  string.wy
(+15 files in other folders)
